[gd_scene load_steps=49 format=2]

[ext_resource path="res://Scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/Monster Creature Pack/goblin.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=170]
radius = 5.99998
height = 12.0

[sub_resource type="CircleShape2D" id=97]
radius = 65.192

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 16, 16 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 2 )
region = Rect2( 16, 160, 16, 16 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 32, 160, 16, 16 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 48, 160, 16, 16 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 2 )
region = Rect2( 16, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 2 )
region = Rect2( 32, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 2 )
region = Rect2( 48, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 2 )
region = Rect2( 16, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 2 )
region = Rect2( 48, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 2 )
region = Rect2( 0, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 2 )
region = Rect2( 16, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 2 )
region = Rect2( 32, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 2 )
region = Rect2( 48, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 2 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 2 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 2 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 2 )
region = Rect2( 16, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 2 )
region = Rect2( 16, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 2 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 2 )
region = Rect2( 48, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 2 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 2 )
region = Rect2( 48, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 2 )
region = Rect2( 0, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 2 )
region = Rect2( 16, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 2 )
region = Rect2( 32, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 2 )
region = Rect2( 48, 112, 16, 16 )

[sub_resource type="SpriteFrames" id=95]
animations = [ {
"frames": [ SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ) ],
"loop": true,
"name": "attack_down",
"speed": 5.0
}, {
"frames": [ SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ) ],
"loop": true,
"name": "attack_up",
"speed": 5.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ) ],
"loop": true,
"name": "run_down",
"speed": 5.0
}, {
"frames": [ SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ) ],
"loop": true,
"name": "run_left",
"speed": 5.0
}, {
"frames": [ SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ) ],
"loop": true,
"name": "run_right",
"speed": 5.0
}, {
"frames": [ SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ) ],
"loop": true,
"name": "run_up",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=102]
radius = 14.0357

[sub_resource type="RectangleShape2D" id=96]
extents = Vector2( 6.5, 7.5 )

[sub_resource type="RectangleShape2D" id=171]
extents = Vector2( 6, 10 )

[node name="enemy" type="KinematicBody2D"]
position = Vector2( 276, 89 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="weapon" type="Area2D" parent="."]
position = Vector2( -1.5, -0.5 )

[node name="kopye" type="CollisionShape2D" parent="weapon"]
position = Vector2( 7.5, 4.5 )
rotation = 1.5708
shape = SubResource( 170 )
disabled = true

[node name="kopye2" type="CollisionShape2D" parent="weapon"]
position = Vector2( -7.5, 4.5 )
rotation = 1.5708
shape = SubResource( 170 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="vision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 97 )

[node name="enemy_animation" type="AnimatedSprite" parent="."]
position = Vector2( -2.75001, -4.04412 )
scale = Vector2( 1.59375, 1.78125 )
frames = SubResource( 95 )
animation = "idle_down"
playing = true

[node name="is_close" type="Area2D" parent="."]
position = Vector2( -1, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="is_close"]
visible = false
position = Vector2( 1, 13 )
shape = SubResource( 102 )

[node name="hit" type="Area2D" parent="."]
visible = false

[node name="hitbox" type="CollisionShape2D" parent="hit"]
position = Vector2( -1.5, -0.5 )
shape = SubResource( 96 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -1 )
shape = SubResource( 171 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="enemy_animation" to="." method="_on_enemy_animation_animation_finished"]
[connection signal="body_entered" from="is_close" to="." method="_on_is_close_body_entered"]
[connection signal="body_exited" from="is_close" to="." method="_on_is_close_body_exited"]
[connection signal="area_entered" from="hit" to="." method="_on_hit_area_entered"]
